@@ -1,3 +1,25 @@
+/****
+DIAMOND protein aligner
+Copyright (C) 2013-2020 Max Planck Society for the Advancement of Science e.V.
+                        Benjamin Buchfink
+                        Eberhard Karls Universitaet Tuebingen
+						
+Code developed by Benjamin Buchfink <benjamin.buchfink@tue.mpg.de>
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
+****/
+
 #include <string.h>
 #include <assert.h>
 #include "value.h"
@@ -25,14 +47,15 @@ Char_representation::Char_representation(unsigned size, const char* chars, char 
 	}
 }
 
-Value_traits::Value_traits(const char* alphabet, Letter mask_char, const char* ignore) :
+Value_traits::Value_traits(const char* alphabet, Letter mask_char, const char* ignore, Sequence_type seq_type) :
 	alphabet(alphabet),
 	alphabet_size((unsigned)strlen(alphabet)),
 	mask_char(mask_char),
-	from_char(Char_representation((unsigned)alphabet_size, alphabet, mask_char, ignore))
+	from_char(Char_representation((unsigned)alphabet_size, alphabet, mask_char, ignore)),
+	seq_type(seq_type)
 {}
 
-const Value_traits amino_acid_traits(AMINO_ACID_ALPHABET, 23, "UO-");
-const Value_traits nucleotide_traits("ACGTN", 4, "MRWSYKVHDBX");
+const Value_traits amino_acid_traits(AMINO_ACID_ALPHABET, 23, "UO-", Sequence_type::amino_acid);
+const Value_traits nucleotide_traits("ACGTN", 4, "MRWSYKVHDBX", Sequence_type::nucleotide);
 Value_traits value_traits(amino_acid_traits);
 Value_traits input_value_traits(amino_acid_traits);
