@@ -40,7 +40,7 @@ void split() {
 	vector<Letter> seq;
 	size_t n = 0, f = 0, b = (size_t)(config.chunk_size * 1e9);
 	OutputFile *out = new OutputFile(std::to_string(f) + ".faa.gz", true);
-	while (FASTA_format().get_seq(id, seq, in)) {
+	while (FASTA_format().get_seq(id, seq, in, value_traits)) {
 		if (seq.size() + n > b) {
 			out->close();
 			delete out;
